Try no longer hiding button text on mobile screens

--- a/app/src/skin/app.scss
+++ b/app/src/skin/app.scss
@@ -209,9 +209,3 @@ h2 {
 hr {
 	color: var(--colorBackgroundShadow);
 }
-
-@media only screen and (max-width: $breakpointMobile) {
-	.with-icon {
-		font-size: 0;
-	}
-}
